Fixed overflow problem

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@
   font-style: normal;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 ::selection {
   background-color: black;
   color: white;
